codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__guardian_approved_exec_renders_approved_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
assertion_line: 169
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---





✔ Auto-reviewer approved millie to run rm -f /tmp/guardian-approved.sqlite this
  time


› Ask Millie to do anything

  millie-35B-A3B-11GB default · /tmp/project
